--- a/samples/react-comparer/.yo-rc.json
+++ b/samples/react-comparer/.yo-rc.json
@@ -1,8 +1,8 @@
 {
   "@microsoft/generator-sharepoint": {
     "isCreatingSolution": true,
-    "environment": "spo",
-    "version": "1.7.1",
+    "environment": "onprem19",
+    "version": "1.9.1",
     "libraryName": "react-comparer",
     "libraryId": "8bc49dd2-60c6-46dc-989b-43a53f055bd0",
     "packageManager": "npm",
