--- a/samples/react-comparer/package.json
+++ b/samples/react-comparer/package.json
@@ -2,6 +2,7 @@
   "name": "react-comparer",
   "version": "0.0.1",
   "private": true,
+  "main": "lib/index.js",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -11,33 +12,32 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "1.7.1",
-    "@microsoft/sp-lodash-subset": "1.7.1",
-    "@microsoft/sp-office-ui-fabric-core": "1.7.1",
-    "@microsoft/sp-webpart-base": "1.7.1",
-    "@pnp/common": "^1.2.8",
-    "@pnp/logging": "^1.2.8",
-    "@pnp/odata": "^1.2.8",
-    "@pnp/sp": "^1.2.8",
-    "@pnp/spfx-controls-react": "^1.11.0",
-    "@pnp/spfx-property-controls": "^1.13.1",
+    "@microsoft/sp-core-library": "~1.4.0",
+    "@microsoft/sp-lodash-subset": "~1.4.0",
+    "@microsoft/sp-office-ui-fabric-core": "~1.4.0",
+    "@microsoft/sp-webpart-base": "~1.4.0",
+    "@pnp/common": "^1.3.5",
+    "@pnp/logging": "^1.3.5",
+    "@pnp/odata": "^1.3.5",
+    "@pnp/sp": "^1.3.5",
+    "@pnp/spfx-controls-react": "^1.14.0",
+    "@pnp/spfx-property-controls": "^1.16.0",
     "@types/es6-promise": "0.0.33",
-    "@types/react": "16.4.2",
-    "@types/react-dom": "16.0.5",
+    "@types/react": "15.6.6",
+    "@types/react-dom": "15.5.6",
     "@types/webpack-env": "1.13.1",
-    "react": "16.3.2",
+    "react": "15.6.2",
     "react-block-image": "^1.0.0",
-    "react-dom": "16.3.2",
-    "react-draggable": "^3.1.1"
+    "react-dom": "15.6.2",
+    "react-draggable": "^4.0.3"
   },
   "resolutions": {
-    "@types/react": "16.4.2"
+    "@types/react": "15.6.6"
   },
   "devDependencies": {
-    "@microsoft/sp-build-web": "1.7.1",
-    "@microsoft/sp-tslint-rules": "1.7.1",
-    "@microsoft/sp-module-interfaces": "1.7.1",
-    "@microsoft/sp-webpart-workbench": "1.7.1",
+    "@microsoft/sp-build-web": "~1.4.1",
+    "@microsoft/sp-module-interfaces": "~1.4.1",
+    "@microsoft/sp-webpart-workbench": "~1.4.1",
     "gulp": "~3.9.1",
     "@types/chai": "3.4.34",
     "@types/mocha": "2.2.38",
