pages-react-hierarchy: children layout set default value

--- a/samples/react-pages-hierarchy/src/webparts/pagehierarchy/PageHierarchyWebPart.manifest.json
+++ b/samples/react-pages-hierarchy/src/webparts/pagehierarchy/PageHierarchyWebPart.manifest.json
@@ -20,7 +20,7 @@
         "default": "Page Hierarchy"
       },
       "description": {
-        "default": "Breadcrumbs description"
+        "default": "Provides alternative page navigation based on parent-child relationships"
       },
       "officeFabricIconFontName": "CompassNW",
       "properties": {
